<resources>
    <string name="app_name">Rick &amp; Morty List</string>
    <string name="module_list_logo_motto">Rick and Morty characters list!</string>
    <string name="common_word_species">Species</string>
    <string name="common_word_gender">Gender</string>
    <string name="common_word_origin">Origin</string>
    <string name="common_word_location">Location</string>
    <string name="common_word_type">Type</string>
    <string name="common_word_dimension">Dimension</string>
    <string name="common_word_episodes">Episodes</string>
    <string name="common_word_unknown">Unknown</string>
    <string name="common_word_locations">Locations</string>
    <string name="common_word_retry">Retry</string>
    <string name="navigate_back">Navigate back</string>
    <string name="list_error_loading_more">Error loading more items</string>
    <string name="character_avatar_description">%s avatar</string>
    <string name="load_character_failed_retry">Failed to load character. Tap to retry!</string>
    <string name="load_episodes_failed_retry">Failed to load episodes. Tap to retry!</string>
</resources>